fixed title align

--- a/Module3_UnitConverterSoloProject/index.css
+++ b/Module3_UnitConverterSoloProject/index.css
@@ -61,6 +61,7 @@ p {
     background: #6943FF;
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 
@@ -88,6 +89,7 @@ button {
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
     border-radius: 5px;
     border: none;
+    font-weight: bolder;
 }
 
 input {
